--- a/Site/initial_login_concrete_cylinder.html
+++ b/Site/initial_login_concrete_cylinder.html
@@ -197,7 +197,7 @@
     <a href="">Dashboard</a>
     <p class="navPara" onclick = "toggleVisibility('InitialLoginDropdown')">Initial Login </p>
         <div class = "dropdown" id = "InitialLoginDropdown" >
-            <a href="">Concrete Cylinders</a>
+            <a href="initial_login_concrete_cylinder.html">Concrete Cylinders</a>
             <a href="">Mortar Cubes</a>
             <a href="">Cores</a>
             <a href="">Grout Cylinders</a>
@@ -205,7 +205,7 @@
     <a href="">Break Input</a>
     <p class="navPara" onclick = "toggleVisibility('ReviewDropdown')">Review</p>
         <div class = "dropdown" id = "ReviewDropdown" >
-            <a href="">Concrete Cylinders</a>
+            <a href="/review_concrete_cylinder.html">Concrete Cylinders</a>
             <a href="">Mortar Cubes</a>
             <a href="">Cores</a>
             <a href="">Grout Cylinders</a>
