--- a/Site/initial_login_concrete_cylinder.html
+++ b/Site/initial_login_concrete_cylinder.html
@@ -213,7 +213,7 @@
     <a href="">Stats</a>
 </div>
 <div id="page">
-<form id="first stage" action = "http://camapp.ca/handler_initial_login.php" method = "post">
+<form id="first stage" action = "/Server/handler_initial_login.php" method = "post">
     <div class = "page-area">
         <div class="grid-topline">
             <span style="float: left;" id="openNav"onclick="openNav()">&#9776;</span><h2>Set Details</h2>
