--- a/Site/review_concrete_cylinder.html
+++ b/Site/review_concrete_cylinder.html
@@ -2,194 +2,7 @@
 <html>
 <!-- since this may all go in a Claro embeded box, styling is all in here rather than a seperate file for now. -->
 <head>
-<style>
-    body{
-        margin: 0px;
-    }
-    .navigation{
-        height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        top: 0; 
-        left: 0;
-        background-color: #144d29; 
-        overflow-x: hidden; 
-        padding-top: 60px; 
-        transition: 0.5s;
-    }
-    .navigation a {
-        font-family: "Century Gothic";
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: white;
-        display: block;
-        transition: 0.3s;
-    }
-    .navigation a:hover{
-        background-color: darkgray;
-        transition: 0.2s;
-    }
-    .navigation .closeButton {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
-    }
-    .navPara {
-        font-family: "Century Gothic";
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: white;
-        display: block;
-        transition: 0.3s;
-        margin: 0px;
-        cursor: pointer;
-    }
-    .navPara:hover {
-        background-color: darkgray;
-        transition: 0.2s;
-    }
-    .dropdown{
-        background-color: #3d4f44;
-        display: none;
-    }
-    .dropdown a{
-        font-size: 18px;
-    }
-    @media screen and (max-height: 450px) {
-        .navigation {padding-top: 15px;}
-        .navigation a {font-size: 18px;}
-        }
-    #openNav{
-        cursor: pointer;
-        margin-left: 20px;
-        text-align: center;
-        font-size: 1.6em;
-        opacity: 1.0;
-        transition: 0.3s;
-    }
-     #page {
-        transition: margin-left .5s;
-        padding: 5px;
-        max-width: 98%;
-        text-align: center;
-    }
-    .page-area{
-        width: 95%;
-        display: inline-block;
-        background-color: #f1f1f1;
-    }
-    .grid-container{
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-gap: 15px;
-        padding: 15px;
-    }
-    .grid-container > div{
-        
-        background-color: lightgray;
-        border-radius: 0px;
-        padding: 15px;
-    }
-    .grid-topline{
-        grid-column: 1 / 3;
-    }
-    .grid-container-2{
-        display: grid;
-        grid-template-columns: auto auto auto auto auto auto auto auto auto;
-        grid-gap: 0px;
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-bottom: 8px;
-        padding-top: 8pxl
-        border-radius: 0px;
-    }
-    .grid-container-2 > div{
-        background-color: lightgray;
-        border-radius: 0px;
-        padding: 4px;
-    }
-    .grid-topline-2{
-        grid-column: 1 / 9;
-    }
-    .lineItem2 > input{
-        margin: 2px auto;
-    }
-    .tableText{
-        text-align: center;
-        margin: auto;
-    }
-     p{
-        font-family: sans-serif;
-        text-align: left;
-        padding: 0px;
-        margin-left: 60px;
-        margin-top: 8px;
-        margin-bottom: 8px;
-    }
-    h2{
-        font-family: sans-serif;
-    }
-    input{
-        width: 80%;
-        height: 25px;
-        border-radius: 2px;
-        border-width: 3px;
-        border-style:solid;
-        border-color: whitesmoke;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 2px;
-        padding-bottom: 2px;
-        font-size: 1.0em;
-        font-weight: normal;
-        margin: 0px auto;
-    }
-    select{
-        width: 83%;
-        height: 35px;
-        border-radius: 2px;
-        border-width: 3px;
-        border-style:solid;
-        border-color: whitesmoke;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 2px;
-        padding-bottom: 2px;
-        font-size: 1.0em;
-        font-weight: normal;
-        margin: 0px auto; 
-    }
-    .interact{
-        width: 98%;
-        height: 40px;
-        padding-bottom: 5px;
-        padding-top: 5px;
-        text-align: center;
-        border-radius: 2px;
-    }
-    .tableButton{
-        width: 31px;
-        height: 31px;
-        border-radius: 2px;
-        text-align: center;
-        margin: 4px;
-        padding: 0px;
-        display: inline-block;
-    }
-    .tableButton:hover{
-        background-color: darkgray;
-    }
-    .interact:hover{
-        background-color: darkgray;
-    }
-  
-</style>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="nav" class="navigation">
